--- a/client/src/components/Filter/Filter.module.css
+++ b/client/src/components/Filter/Filter.module.css
@@ -1,20 +1,21 @@
 body{
-    background-color: rgb(221, 217, 217);
+    background-color: rgb(52, 32, 56);;
 }
 .genres{
     display: flex;
     justify-content: space-between;
     margin: 6px;
-    margin-top: 6px;
+    margin-top: 9px;
     margin-right: 6px;
     margin-left: 6px;
     height: 65px;
-    background-color: rgb(218, 140, 140);
+    background: #686f7e;
 }
 .base{
     color: rgb(255, 255, 255);
     height:20px;
     margin: 6px;
+    margin-top: 8px;
     margin-right: 6px;
     margin-left: 6px;
 }
@@ -24,7 +25,9 @@ body{
 	cursor: pointer;
   	padding: 7px 10px;
   	height: 42px;
-  	outline: 0; 
+  	outline: 0;
+    margin: 4px; 
+    margin-top: 4px;
   	border: 0;
 	border-radius: 0;
 	background: #f0f0f0;
