--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -1,9 +1,10 @@
 .base{
-    background-color: rgb(221, 217, 217);
+    background-color: rgb(52, 32, 56);
 }
 .cards{
     display:grid;
         width: 75%;
+        height: 50%;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 10px;
         margin: auto;
@@ -13,25 +14,39 @@
         padding-bottom: 15px;
 }
 .cartas {
-    border: 1px solid white;
+    border: 3px solid rgb(20, 18, 18);
     display:block;
     margin-top:10px;
     margin-left: 10px; 
     border-radius:15px;
     border-color: black;
+    box-shadow: black;
     width: 100%;
-    height: 100%;
+    height: 90%;
     text-align:center;
-    background-color: #ffffff;
+    background-color: #6a597e;
+    transition: 1s;
+    transition-delay: 2,4s;
+    transition-timing-function: ease-in-out;
+    
+    
 }
-    img{
+.cartas:hover{
+    background-color: rgba(87, 9, 139, 0.527);
+    border-color: rgb(252, 252, 255);
+}
+    .img{
+        display: flex;
         align-items: center;
         justify-content: center;
-        width: 200px;
-        height: 90px;
+        width: 250px;
+        height: 180px;
+        margin: 5px;
+        margin-left: 29px;
         margin-top: 10px;
         border: white solid;
     }
+    
 .link{
         color: inherit;
         width: 100%;
@@ -43,5 +58,15 @@
     align-items: center;
     
     justify-content:space-around;
-    color: indigo;
+    color: rgb(255, 255, 255);
 }
+.abajo:hover {
+    color : white;
+    
+}
+.nombre{
+    color : white;
+    font-size: Century Gothic;
+}
+
+
