--- a/client/src/components/NavBar/Nav.module.css
+++ b/client/src/components/NavBar/Nav.module.css
@@ -1,7 +1,7 @@
 .todo{
     display: flex;
     justify-content: space-between;
-    background-color: rgb(31, 31, 31);
+    background-color: #2b303b;
     position:static;
     width: 100%;
     height: 100%;
@@ -11,32 +11,31 @@
     align-items: center;
     border-radius: 4px;
     border-bottom: rgb(111, 187, 149);
-    background-color: white;
-    color: black;
+    background-color: #2b303b;
+    color: #ffffff;
     margin-top: 13px;
-    margin-left: 6px;
+    margin-left: 16px;
     margin-right: 6px;
     padding: 15px 32px;
     margin-bottom: 6px;
     font-size: 16px;
-    border: 3px  solid rgb(209, 128, 128)
+    border: 1px  solid rgb(255, 255, 255)
 }
 .boton:hover{
-    color:white;
-    background-color: black;
-    border: 3px solid white;
+    color:rgb(12, 11, 11);
+    background-color: rgb(255, 250, 250);
+    border: 1px solid rgb(7, 6, 6);
 }
 .volver{
     display: flex;
-    background-color: white;
     margin: 6px 6px;
+    font-size: 20%;
     margin-top: 6px;
-    margin-left: 10px;
-    width: 150px;
+    margin-left: 15px;
+    width: 100px;
     margin-right: 6px;
-    border: 1px  solid black;
     border-radius:12px;
-}
+} 
 .Crear{
     display: flex;
     border-radius: 20px;
@@ -46,27 +45,62 @@
     border: 2px solid black;
 }
 
-.buscador{
-   display: flex;
-   justify-content: center;
-    border: 3px solid rgb(241, 135, 135); 
-   width: 25%;
-   background-color: rgb(255, 255, 255);
-   margin-top:0%; 
-}
+/* .buscador{
+    width: 300px;
+    vertical-align: middle;
+    white-space: nowrap;
+    position: relative;
+    
+} */
 .form{
-    display: flex;
-    margin-top: 20px;
-    margin-right: 6px;   
+  width: 300px;
+  vertical-align: middle;
+  white-space: nowrap;
+  position: relative;
+  margin-top:12px;
 }
 .inp{
-    border: 4px solid black;
-    background-color: rgb(255, 249, 249);
-    color: black;
-    margin-top: 4px;
-    
+    width: 200px;
+    height: 50px;
+    background: #2b303b;
+    border: 1px solid white;
+    font-size: 10pt;
+    float: left;
+    color: #ffffff;
+    padding-left: 45px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+  
 }
-.button{
-    border: 4px solid rgb(10, 10, 10);
-    margin-top: 4px;
+.inp:hover {
+  outline:none;
+  background: #ffffff;
+  border: 1px solid rgb(25, 29, 54);
+  color: #000000;
 }
+.icon{
+    display: flex;
+    position: absolute;
+    top: 50%;
+    margin-left: 17px;
+    margin-top: 17px;
+    z-index: 1;
+    color: #4f5b66;
+}
+
+.form input.inp::-webkit-input-placeholder {
+    color: #65737e;
+ }
+  
+ .form input.inp:-moz-placeholder { /* Firefox 18- */
+    color: #65737e;  
+ }
+  
+ .form input.inp::-moz-placeholder {  /* Firefox 19+ */
+    color: #65737e;  
+ }
+  
+ .form input.inp:-ms-input-placeholder {  
+    color: #65737e;  
+ }
